# Microservicio-PDF

./: .env.example  .gitignore  Dockerfile  FIX_EMPRESA_DTO.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_tests.sh
docs/: api_design.md  architecture.md  development_guide.md
src/: __init__.py  main.py
src/application/: __init__.py
src/application/dto/: __init__.py  pdf_request_dto.py
src/application/services/: __init__.py  pdf_service.py
src/application/use_cases/: __init__.py  generar_comprobante_contrato.py  generar_comprobante_postulacion.py  generate_pdf.py
src/domain/: __init__.py
src/domain/entities/: __init__.py  pdf_document.py
src/domain/exceptions/: __init__.py  domain_exceptions.py
src/domain/interfaces/: __init__.py  pdf_generator_interface.py
src/domain/value_objects/: __init__.py  pdf_style.py
src/infrastructure/: __init__.py
src/infrastructure/config/: __init__.py  settings.py
src/infrastructure/pdf/: __init__.py  reportlab_generator.py
src/infrastructure/persistence/: __init__.py
src/presentation/: __init__.py
src/presentation/api/v1/: __init__.py  router.py
src/presentation/dependencies/: __init__.py  container.py
src/presentation/schemas/: __init__.py  comprobante_contrato_schemas.py  comprobante_postulacion_schemas.py  pdf_schemas.py
tests/: LOCUST_FIX.md  LOCUST_GUIDE.md  TROUBLESHOOTING.md  conftest.py
tests/integration/: __init__.py
tests/load/: locustfile.py
tests/unit/: __init__.py  test_dto_mapping.py
